--- a/packages/block-library/src/query/editor.scss
+++ b/packages/block-library/src/query/editor.scss
@@ -46,8 +46,8 @@
 }
 
 .block-library-query-toolspanel__design {
-	.block-library-query-pattern__selection-search {
-		margin-bottom: $grid-unit-20;
+	.block-library-query-pattern__selection-content {
+		margin-top: $grid-unit-10;
 	}
 }
 
