First attempt at moving the designs in a dropdone popover.

--- a/packages/block-library/src/query/editor.scss
+++ b/packages/block-library/src/query/editor.scss
@@ -60,3 +60,7 @@
 .wp-block-query__enhanced-pagination-notice {
 	margin: 0;
 }
+
+.block-editor-block-settings-menu__popover {
+	min-width: 500px;
+}
